toolchain/internal/core/analysis/testdata/errors/spreads/conflict_inline_via_indirect_spread.vdl
// @expect: E203

type BasePayload {
  value string
}

type MidPayload {
  ...BasePayload
}

type Envelope {
  payload {
    ...MidPayload
    value bool
  }
}
